tests/snapshots/sfc/ts/patches__v_if_with_component_props.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 196
expression: ts_output
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createBlock as _createBlock, createCommentVNode as _createCommentVNode, unref as _unref } from "vue"

import PatinaPlayground from './PatinaPlayground.vue'
const show = true

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const compiler = {}

return (_ctx: any,_cache: any) => {
  return (show)
      ? (_openBlock(), _createBlock(PatinaPlayground, {
        key: 0,
        compiler: _unref(compiler)
      }))
      : _createCommentVNode("v-if", true)
}
}

})
