tests/snapshots/sfc/ts/patches__v_if_with_v_model_on_input.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 196
expression: ts_output
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode } from "vue"

import { ref } from 'vue'

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const show = ref(true)
const text = ref('')

return (_ctx: any,_cache: any) => {
  return (show.value)
      ? (_openBlock(), _createElementBlock("input", {
        key: 0,
        "onUpdate:modelValue": _cache[0] || (_cache[0] = ($event: any) => ((text).value = $event))
      }))
      : _createCommentVNode("v-if", true)
}
}

})
